Fix FunctionCalling to work with Java 18 #3